# BebraLand-Discord-Bot

./: .env.example  .gitignore  AGENTS.md  IMPROVEMENTS.md  LOCALIZATION.md  MIGRATION.md  MIGRATION_SUMMARY.md  README.md  WelcomeMessagePlaceholders.md  json-generator.html  main.py  mypy.ini  pyproject.toml  requirements-db.txt  requirements-old.txt  requirements.txt  test_dynamic_language_switching.py  test_error_handling.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.trae/rules/: project_rules.md
cogs/: twitchMonitor.py
config/: applications.json  command.py  config prod.yaml  config.example.yaml  config.json  config.py  constants.py  tickets.json  twitch_subscribers.json
docs/: DASHBOARD_INTEGRATION_EXAMPLE.py  DASHBOARD_QUICKSTART.md  DASHBOARD_SETUP.md
scripts/: validate_translations.py
src/: lifecycle.py
src/api/: health.py
src/commands/: admin.py  clearDM.py  clearDMadmin.py  clear_dm.py  faq.py  invite_user_context.py  radio.py  rules.py  sendLanguageSelector.py  sendMessage.py  sendNews.py  sendTwitchNotificationMessage.py  send_ticket_panel.py  setWelcomeMessage.py  set_lang.py  tempVoice.py  toggle_invites.py  twitchMonitor.py
src/events/: on_member_join.py  (+3 more)
test/: test_localize.py  test_validate_translations.py
tests/: test_config_validation.py  test_embeds_message_data.py  test_event_admin_list.py  test_event_discord_scheduled.py  test_event_unlimited_players.py  test_status_core.py  test_status_minecraft.py  test_status_monitor.py  test_welcome.py
(+172 files in other folders)
